# Booking_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  exceptions.py  ioc.py  logging.py  main.py  rate_limit.py
app/api/: errors.py  middleware.py
app/api/v1/: bookings.py  health.py
app/domain/: models.py  schemas.py
app/repositories/: base.py  sqlalchemy.py
app/services/: booking.py
app/worker/: broker.py  confirmation.py  queue.py  tasks.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  factories.py  fakes.py
tests/e2e/: conftest.py  test_api.py
tests/integration/: test_rate_limit.py  test_repository.py
tests/unit/: test_confirmation.py  test_schemas.py  test_service.py
