[project]
name = "booking-service"
version = "0.1.0"
description = "Сервис записи на встречи"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "fastapi>=0.137.1",
    "pydantic-settings>=2.14.1",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
    "taskiq>=0.12.4",
    "taskiq-redis>=1.1.2",
    "uuid6>=2025.0.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis[lua]>=2.36.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "RUF001", # неоднозначные юникод-символы (кириллица в строках)
    "RUF002", # то же в докстрингах
    "RUF003", # то же в комментариях
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["app", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
